[tool.poetry]
name = "dmimagepresenter"
version = "0.1.0"
description = ""
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9,"
pyside6 = "^6.7.2"
pyinstaller = "^6.10.0"
poethepoet = "^0.29.0"

[tool.poe.tasks]
build-windows = "pyinstaller --onefile --windowed --noconfirm --name \"DM Image Presenter\" --icon H.ico db_image_presenter.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
